--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@jacobmischka/choosealicense.com",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "A site to provide non-judgmental guidance on choosing a license for your open source project, added to NPM",
-  "main": "index.json",
+  "main": "licenses.json",
   "repository": "https://github.com/jacobmischka/choosealicense.com.git",
   "author": "Jacob Mischka <jacob@mischka.me>",
   "license": "MIT",
